# fastai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: Untitled1.py  lesson1.py  pytorch test.py
notebooks/chapter01/: oxford_pet_example.py  segmentation_example.py  sentiment_example.py
notebooks/chapter02/: bear_classifier.py
notebooks/chapter03/: hello_dataloader.py
notebooks/chapter04/: hello_autograd.py  overfit.py  pch_math.py
src/: image_classifier.py
